--- a/content/themes/development/default.hbs
+++ b/content/themes/development/default.hbs
@@ -12,7 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     {{!-- Styles'n'Scripts --}}
-    <link rel="stylesheet" type="text/css" href="{{asset "built/screen.css"}}" />
+    <!--<link rel="stylesheet" type="text/css" href="{{asset "built/screen.css"}}" />-->
+    <link rel="stylesheet" type="text/css" href="{{asset "css/casper.css"}}" />
 
     {{!-- This tag outputs SEO meta+structured data and other important settings --}}
     {{ghost_head}}
@@ -61,7 +62,12 @@
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous">
     </script>
+
+    <script type="text/javascript" src="{{asset "js/casper.js"}}"></script>
+    
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
+    <!-- Added this to demonstrate babel compiled js -->
+    
 
     {{#if pagination.pages}}
     <script>
